# RaceWinnerCalculator

./: CMakeLists.txt  README.md  main.cpp
include/: KartPassingTime.h  KartPassingTimeCsvParser.h  WinnerCalculator.h  timeUtils.h
src/: KartPassingTimeCsvParser.cpp  WinnerCalculator.cpp  timeUtils.cpp
tests/: CMakeLists.txt  KartTimeCsvParserTest.cpp  WinnerClassTest.cpp  WinnerClassTest.h
